--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -23875,6 +23875,99 @@ references:
   commentId: N:Flame.TypeSystem
   fullName: Flame.TypeSystem
   nameWithType: Flame.TypeSystem
+- uid: Flame.TypeSystem.AccessModifier
+  name: AccessModifier
+  href: api/Flame.TypeSystem.AccessModifier.html
+  commentId: T:Flame.TypeSystem.AccessModifier
+  fullName: Flame.TypeSystem.AccessModifier
+  nameWithType: AccessModifier
+- uid: Flame.TypeSystem.AccessModifier.Internal
+  name: Internal
+  href: api/Flame.TypeSystem.AccessModifier.html#Flame_TypeSystem_AccessModifier_Internal
+  commentId: F:Flame.TypeSystem.AccessModifier.Internal
+  fullName: Flame.TypeSystem.AccessModifier.Internal
+  nameWithType: AccessModifier.Internal
+- uid: Flame.TypeSystem.AccessModifier.Private
+  name: Private
+  href: api/Flame.TypeSystem.AccessModifier.html#Flame_TypeSystem_AccessModifier_Private
+  commentId: F:Flame.TypeSystem.AccessModifier.Private
+  fullName: Flame.TypeSystem.AccessModifier.Private
+  nameWithType: AccessModifier.Private
+- uid: Flame.TypeSystem.AccessModifier.Protected
+  name: Protected
+  href: api/Flame.TypeSystem.AccessModifier.html#Flame_TypeSystem_AccessModifier_Protected
+  commentId: F:Flame.TypeSystem.AccessModifier.Protected
+  fullName: Flame.TypeSystem.AccessModifier.Protected
+  nameWithType: AccessModifier.Protected
+- uid: Flame.TypeSystem.AccessModifier.ProtectedAndInternal
+  name: ProtectedAndInternal
+  href: api/Flame.TypeSystem.AccessModifier.html#Flame_TypeSystem_AccessModifier_ProtectedAndInternal
+  commentId: F:Flame.TypeSystem.AccessModifier.ProtectedAndInternal
+  fullName: Flame.TypeSystem.AccessModifier.ProtectedAndInternal
+  nameWithType: AccessModifier.ProtectedAndInternal
+- uid: Flame.TypeSystem.AccessModifier.ProtectedOrInternal
+  name: ProtectedOrInternal
+  href: api/Flame.TypeSystem.AccessModifier.html#Flame_TypeSystem_AccessModifier_ProtectedOrInternal
+  commentId: F:Flame.TypeSystem.AccessModifier.ProtectedOrInternal
+  fullName: Flame.TypeSystem.AccessModifier.ProtectedOrInternal
+  nameWithType: AccessModifier.ProtectedOrInternal
+- uid: Flame.TypeSystem.AccessModifier.Public
+  name: Public
+  href: api/Flame.TypeSystem.AccessModifier.html#Flame_TypeSystem_AccessModifier_Public
+  commentId: F:Flame.TypeSystem.AccessModifier.Public
+  fullName: Flame.TypeSystem.AccessModifier.Public
+  nameWithType: AccessModifier.Public
+- uid: Flame.TypeSystem.AccessModifierAttribute
+  name: AccessModifierAttribute
+  href: api/Flame.TypeSystem.AccessModifierAttribute.html
+  commentId: T:Flame.TypeSystem.AccessModifierAttribute
+  fullName: Flame.TypeSystem.AccessModifierAttribute
+  nameWithType: AccessModifierAttribute
+- uid: Flame.TypeSystem.AccessModifierAttribute.AttributeName
+  name: AttributeName
+  href: api/Flame.TypeSystem.AccessModifierAttribute.html#Flame_TypeSystem_AccessModifierAttribute_AttributeName
+  commentId: F:Flame.TypeSystem.AccessModifierAttribute.AttributeName
+  fullName: Flame.TypeSystem.AccessModifierAttribute.AttributeName
+  nameWithType: AccessModifierAttribute.AttributeName
+- uid: Flame.TypeSystem.AccessModifierAttribute.Create(Flame.TypeSystem.AccessModifier)
+  name: Create(AccessModifier)
+  href: api/Flame.TypeSystem.AccessModifierAttribute.html#Flame_TypeSystem_AccessModifierAttribute_Create_Flame_TypeSystem_AccessModifier_
+  commentId: M:Flame.TypeSystem.AccessModifierAttribute.Create(Flame.TypeSystem.AccessModifier)
+  fullName: Flame.TypeSystem.AccessModifierAttribute.Create(Flame.TypeSystem.AccessModifier)
+  nameWithType: AccessModifierAttribute.Create(AccessModifier)
+- uid: Flame.TypeSystem.AccessModifierAttribute.Create*
+  name: Create
+  href: api/Flame.TypeSystem.AccessModifierAttribute.html#Flame_TypeSystem_AccessModifierAttribute_Create_
+  commentId: Overload:Flame.TypeSystem.AccessModifierAttribute.Create
+  isSpec: "True"
+  fullName: Flame.TypeSystem.AccessModifierAttribute.Create
+  nameWithType: AccessModifierAttribute.Create
+- uid: Flame.TypeSystem.AccessModifierAttribute.GetAccessModifier(Flame.IType)
+  name: GetAccessModifier(IType)
+  href: api/Flame.TypeSystem.AccessModifierAttribute.html#Flame_TypeSystem_AccessModifierAttribute_GetAccessModifier_Flame_IType_
+  commentId: M:Flame.TypeSystem.AccessModifierAttribute.GetAccessModifier(Flame.IType)
+  fullName: Flame.TypeSystem.AccessModifierAttribute.GetAccessModifier(Flame.IType)
+  nameWithType: AccessModifierAttribute.GetAccessModifier(IType)
+- uid: Flame.TypeSystem.AccessModifierAttribute.GetAccessModifier*
+  name: GetAccessModifier
+  href: api/Flame.TypeSystem.AccessModifierAttribute.html#Flame_TypeSystem_AccessModifierAttribute_GetAccessModifier_
+  commentId: Overload:Flame.TypeSystem.AccessModifierAttribute.GetAccessModifier
+  isSpec: "True"
+  fullName: Flame.TypeSystem.AccessModifierAttribute.GetAccessModifier
+  nameWithType: AccessModifierAttribute.GetAccessModifier
+- uid: Flame.TypeSystem.AccessModifierAttribute.Read(Flame.TypeSystem.IntrinsicAttribute)
+  name: Read(IntrinsicAttribute)
+  href: api/Flame.TypeSystem.AccessModifierAttribute.html#Flame_TypeSystem_AccessModifierAttribute_Read_Flame_TypeSystem_IntrinsicAttribute_
+  commentId: M:Flame.TypeSystem.AccessModifierAttribute.Read(Flame.TypeSystem.IntrinsicAttribute)
+  fullName: Flame.TypeSystem.AccessModifierAttribute.Read(Flame.TypeSystem.IntrinsicAttribute)
+  nameWithType: AccessModifierAttribute.Read(IntrinsicAttribute)
+- uid: Flame.TypeSystem.AccessModifierAttribute.Read*
+  name: Read
+  href: api/Flame.TypeSystem.AccessModifierAttribute.html#Flame_TypeSystem_AccessModifierAttribute_Read_
+  commentId: Overload:Flame.TypeSystem.AccessModifierAttribute.Read
+  isSpec: "True"
+  fullName: Flame.TypeSystem.AccessModifierAttribute.Read
+  nameWithType: AccessModifierAttribute.Read
 - uid: Flame.TypeSystem.AssemblyResolver
   name: AssemblyResolver
   href: api/Flame.TypeSystem.AssemblyResolver.html
